finish ml notebook

--- a/convert.ipynb
+++ b/convert.ipynb
@@ -9,11 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
+    "\n",
+    "# This is important!\n",
+    "import os\n",
+    "os.environ['TF_ENABLE_CONTROL_FLOW_V2'] = '1'\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -22,33 +26,57 @@
     "from tensorflow.keras.layers import Dense, Dropout, Flatten, Reshape, GlobalAveragePooling1D\n",
     "from tensorflow.keras.layers import Conv1D, MaxPooling1D, LSTM, TimeDistributed, Flatten, Lambda\n",
     "from tensorflow.keras import utils\n",
-    "\n",
-    "# This is important!\n",
-    "import os\n",
-    "os.environ['TF_ENABLE_CONTROL_FLOW_V2'] = '1'"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cnn_best_model = tf.keras.models.load_model('cnn_best_model.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0521 13:28:20.218511  3932 deprecation.py:506] From c:\\users\\devmi\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:97: calling GlorotUniform.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "W0521 13:28:20.245429  3932 deprecation.py:506] From c:\\users\\devmi\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:97: calling Zeros.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnn_best_model = tf.keras.models.load_model('cnn_best_model_acconly.45-0.25.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0521 13:28:50.575284  3932 deprecation.py:323] From c:\\users\\devmi\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\tensorflow\\lite\\python\\util.py:238: convert_variables_to_constants (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.convert_variables_to_constants`\n",
+      "W0521 13:28:50.577267  3932 deprecation.py:323] From c:\\users\\devmi\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\tensorflow\\python\\framework\\graph_util_impl.py:270: extract_sub_graph (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.extract_sub_graph`\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2502340"
+       "2490328"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,14 +84,14 @@
    "source": [
     "tf.keras.backend.set_learning_phase(False)\n",
     "# cnn_best_model.output\n",
-    "converter = tf.lite.TFLiteConverter.from_keras_model_file(\"cnn_best_model.h5\")\n",
+    "converter = tf.lite.TFLiteConverter.from_keras_model_file(\"cnn_best_model_acconly.45-0.25.h5\")\n",
     "tflite_model = converter.convert()\n",
-    "open(\"CNN_2.tflite\", \"wb\").write(tflite_model)"
+    "open(\"CNN_3_acconly.tflite\", \"wb\").write(tflite_model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,22 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2502392"
+       "2490328"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "open(\"CNN.tflite\", \"wb\").write(cnn_lite)"
+    "open(\"CNN_3.tflite\", \"wb\").write(cnn_lite)"
    ]
   }
  ],
