rename images folder

--- a/HAPTML.ipynb
+++ b/HAPTML.ipynb
@@ -303,7 +303,7 @@
    "source": [
     "## CNN MODEL\n",
     "The first model that was unsed in this research was a CNN model with the following architecture:\n",
-    "![CNN Model](images/cnn_model.png)"
+    "![CNN Model](Images/cnn_model.png)"
    ]
   },
   {
