add cnn model photo

--- a/HAPTML.ipynb
+++ b/HAPTML.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,8 @@
     "from tensorflow.keras.layers import Input, Lambda\n",
     "from tensorflow.keras import utils\n",
     "from tensorflow.keras.callbacks import Callback\n",
-    "from tensorflow.keras.optimizers import Adam"
+    "from tensorflow.keras.optimizers import Adam\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
